# backend/src/controllers/ingredient/createNewIngredient.controller.js
@@ -1,23 +1,21 @@
 const pool = require('../../utils/database');
+const {
+  generateIngredientId,
+  generateIngredientCategoryId,
+} = require('../../utils/idGenerator');
 
 async function createNewIngredient(req, res) {
-  const {
-    ingredientId,
-    name,
-    quantity,
-    unit,
-    adjustmentPrice,
-    costPerUnit,
-    category,
-  } = req.body;
+  const {name, quantity, unit, adjustmentPrice, costPerUnit, category} =
+    req.body;
+
+  let categoryId;
 
   // ตรวจสอบว่าได้รับข้อมูลครบถ้วนหรือไม่
   if (
-    !ingredientId ||
     !name ||
     !quantity ||
     !unit ||
-    !adjustmentPrice ||
+    !Number.isInteger(adjustmentPrice) ||
     !costPerUnit ||
     !category
   ) {
@@ -29,12 +27,36 @@ async function createNewIngredient(req, res) {
     // ตรวจสอบว่า IngredientID หรือ Name ซ้ำหรือไม่
     const checkQuery = `
                 SELECT * FROM Ingredient 
-                WHERE ingredientId = ? 
+                WHERE name = ?
             `;
-    const rows = await conn.query(checkQuery, ingredientId);
+    const rows = await conn.query(checkQuery, [name]);
     if (rows.length > 0) {
-      return res.status(400).json({message: 'ingredientId already exists'});
+      return res.status(400).json({
+        message: `Ingredient with name ${name} already exists.`,
+      });
     }
+
+    // ตรวจสอบว่า IngredientCategoryID มีอยู่ในฐานข้อมูลหรือไม่
+    const checkCategoryQuery = `
+                SELECT * FROM IngredientCategory 
+                WHERE Name = ?
+            `;
+    const categoryRows = await conn.query(checkCategoryQuery, [category]);
+    if (categoryRows.length === 0) {
+      // create new category
+      const insertCategoryQuery = `
+                INSERT INTO IngredientCategory (IngredientCategoryID, Name)
+                VALUES (?, ?)
+            `;
+      categoryId = generateIngredientCategoryId();
+      await conn.query(insertCategoryQuery, [categoryId, category]);
+    } else if (categoryRows.length === 1) {
+      // ใช้ IngredientCategoryID ที่มีอยู่แล้ว
+      categoryId = categoryRows[0].IngredientCategoryID;
+    }
+
+    // สร้าง IngredientID ใหม่
+    const ingredientId = generateIngredientId();
 
     const insertQuery = `
             INSERT INTO Ingredient (ingredientId, name, quantity, unit, adjustmentPrice, costPerUnit, IngredientCategoryID)
@@ -47,7 +69,7 @@ async function createNewIngredient(req, res) {
       unit,
       adjustmentPrice,
       costPerUnit,
-      category,
+      categoryId,
     ]);
 
     res.status(201).json({
@@ -57,7 +79,7 @@ async function createNewIngredient(req, res) {
       unit,
       adjustmentPrice,
       costPerUnit,
-      category,
+      category: categoryId,
     });
   } catch (error) {
     res
