# backend/src/controllers/menu/createMenu.controller.js
@@ -1,20 +1,11 @@
 const pool = require('../../utils/database');
-const {validationResult} = require('express-validator');
+const {generateMenuId} = require('../../utils/idGenerator');
 
 const createMenu = async (req, res) => {
   const menu = req.body;
 
-  const errors = validationResult(req);
-  if (!errors.isEmpty()) {
-    return res.status(400).json({
-      error: 'Bad Request - Invalid input data.',
-    });
-  }
-
   var conn;
   try {
-    const getMenuPk = `SELECT IFNULL(MAX(MenuId), 0) AS menuId FROM Menu;`;
-
     const insertMenu = `
     INSERT INTO Menu (MenuId, MenuName, MenuPrice, MenuStatus, MenuDescription, MenuURL, MenuCategory)
     VALUES (?, ?, ?, ?, ?, ?, ?);
@@ -25,23 +16,31 @@ const createMenu = async (req, res) => {
     VALUES (?, ?, ?, ?, ?);
     `;
 
+    // Check if ingredient exists
+    const checkIngredient = `
+    SELECT IngredientID FROM Ingredient WHERE IngredientID = ?;
+    `;
+
     conn = await pool.getConnection();
+
+    let notExistIngredients = [];
+    for (const recipe of menu.defaultRecipe) {
+      const ingredientId = recipe.ingredientId;
+      const rows = await pool.query(checkIngredient, [ingredientId]);
+      if (rows.length === 0) {
+        notExistIngredients.push(ingredientId);
+      }
+    }
+    if (notExistIngredients.length > 0) {
+      return res.status(400).json({
+        message: `Ingredient(s) with ID(s) ${notExistIngredients.join(', ')} do not exist.`,
+      });
+    }
+
     await conn.beginTransaction();
 
     // Increase PK
-    let [results] = await conn.query(getMenuPk);
-    let menuId;
-    if (results.menuId == 0) {
-      menuId = 'M000000001';
-    } else {
-      const prefix = results.menuId.slice(0, 1);
-      const number = parseInt(results.menuId.slice(1));
-
-      const newNumber = number + 1;
-      const padded = String(newNumber).padStart(9, '0');
-
-      menuId = prefix + padded;
-    }
+    let menuId = generateMenuId();
 
     let result = await conn.query(insertMenu, [
       menuId,
@@ -77,7 +76,7 @@ const createMenu = async (req, res) => {
     await conn.rollback();
 
     console.log(err);
-    return res.status(500).json({error: 'Internal Server Error.'});
+    return res.status(500).json({message: 'Internal Server Error.'});
   } finally {
     await conn.release();
   }
